--- a/package.json
+++ b/package.json
@@ -189,10 +189,10 @@
     "cordova-plugin-add-swift-support": "1.7.2",
     "cordova-plugin-android-fingerprint-auth": "1.4.3",
     "cordova-plugin-compat": "1.2.0",
-    "cordova-plugin-customurlscheme": "https://github.com/cmgustavo/Custom-URL-scheme.git#v4.0",
+    "cordova-plugin-customurlscheme": "git+https://github.com/cmgustavo/Custom-URL-scheme.git#v4.0",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-dialogs": "2.0.1",
-    "cordova-plugin-fcm": "https://github.com/cmgustavo/cordova-plugin-fcm.git#v4.1",
+    "cordova-plugin-fcm": "git+https://github.com/cmgustavo/cordova-plugin-fcm.git#v4.1",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-globalization": "1.11.0",
     "cordova-plugin-inappbrowser": "2.0.2",
@@ -206,7 +206,7 @@
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-touch-id": "3.3.1",
     "cordova-plugin-uniquedeviceid": "1.3.2",
-    "cordova-plugin-useragent": "https://github.com/danielsogl/cordova-plugin-useragent.git",
+    "cordova-plugin-useragent": "git+https://github.com/danielsogl/cordova-plugin-useragent.git",
     "cordova-plugin-vibration": "3.1.0",
     "cordova-plugin-whitelist": "1.3.3",
     "cordova-plugin-x-socialsharing": "5.4.0",
@@ -296,7 +296,9 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-uniquedeviceid": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-custom-config": {},
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "bitcoin",
