modified build ionic

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "clean-all": "git clean -dfx",
     "lint": "ionic-app-scripts lint",
     "ionic:debug": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build --prod --release --aot --minifyjs --optimizejs --minifycss",
+    "ionic:build": "node --max-old-space-size=8192 --stack-size=1968 node_modules/@ionic/app-scripts/bin/ionic-app-scripts.js build",
     "ionic:serve": "ionic-app-scripts serve",
     "watch": "ng test --browsers=Chrome",
     "test": "run-s env:dev test:lint test:ci env:e2e e2e env:dev",
